--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+2012/01/03 Sebastien Bihorel <sb.pmlab@gmail.com>
+
+  * In vignette, png images were switched to pdf files.  
+
 2011/03/30 Sebastien Bihorel <sb.pmlab@gmail.com>
 
   * Corrected encoding of vignette source (latin1 instead of utf8x)
