--- a/vignettes/fminsearch.outputfun.tex
+++ b/vignettes/fminsearch.outputfun.tex
@@ -6,7 +6,7 @@
 This function calls the output function and make it match neldermead
 requirements. It is used in the \code{fminbnd} function as the
 \code{outputcommand} element of the neldermead object (see
-\code{?neldermead} and \code{?neldermead.configure}).
+\code{?neldermead} and \code{?neldermead.set}).
 \end{Description}
 %
 \begin{Usage}
@@ -58,5 +58,5 @@ Author of R adaptation: Sebastien Bihorel (\email{sb.pmlab@gmail.com})
 \begin{SeeAlso}\relax
 \code{\LinkA{fminbnd}{fminbnd}},
 \code{\LinkA{neldermead}{neldermead}},
-\code{\LinkA{neldermead.configure}{neldermead.configure}},
+\code{\LinkA{neldermead.set}{neldermead.set}},
 \end{SeeAlso}
