--- a/vignettes/neldermead.search.tex
+++ b/vignettes/neldermead.search.tex
@@ -34,5 +34,5 @@ Author of R adaptation: Sebastien Bihorel (\email{sb.pmlab@gmail.com})
 \begin{SeeAlso}\relax
 \code{\LinkA{fminsearch}{fminsearch}},
 \code{\LinkA{neldermead}{neldermead}},
-\code{\LinkA{neldermead.configure}{neldermead.configure}},
+\code{\LinkA{neldermead.set}{neldermead.set}},
 \end{SeeAlso}
