--- a/vignettes/fminsearch.function.tex
+++ b/vignettes/fminsearch.function.tex
@@ -6,7 +6,7 @@
 This function calls the cost function and makes it match neldermead
 requirements. It is used in the \code{fminsearch} function as the
 \code{function} element of the neldermead object (see \code{?neldermead}
-and \code{?neldermead.configure}). 
+and \code{?neldermead.set}). 
 \end{Description}
 %
 \begin{Usage}
@@ -47,5 +47,5 @@ Author of R adaptation: Sebastien Bihorel (\email{sb.pmlab@gmail.com})
 \begin{SeeAlso}\relax
 \code{\LinkA{fminsearch}{fminsearch}},
 \code{\LinkA{neldermead}{neldermead}},
-\code{\LinkA{neldermead.configure}{neldermead.configure}},
+\code{\LinkA{neldermead.set}{neldermead.set}},
 \end{SeeAlso}
