--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,8 @@
+2015/01/11 Sebastien Bihorel <sb.pmlab@gmail.com>
+  
+  * Corrected bugs with Box's method in following functions:
+  neldermead.storehistory, neldermead.isroneill, neldermead.updatesimp
+
 2014/03/01 Sebastien Bihorel <sb.pmlab@gmail.com>
   
   * Simplified set and get methods:
